Some fixes following review - smaller font for content, always display scrollbars, fix rounding of points

--- a/docs/css/janszen.css
+++ b/docs/css/janszen.css
@@ -7,6 +7,7 @@
     height: revert;
     flex: 1 1 300px;
     overflow-y: auto;
+    margin: 1em 0 1em 0;
 }
 
 .mxcw-leftPane {
@@ -17,7 +18,7 @@ body {
 }
 
 .mxcw-content {
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .mxcw-widgetPane.mxcw-activeWidgetPane {
@@ -35,6 +36,7 @@ body {
 .mxcw-widgetPane {
     flex-flow: row wrap;
     flex-direction: row;
+    margin: 1em;
 }
 
 .mxcw-widgetPane > div {
@@ -43,3 +45,17 @@ body {
     transform-origin: left top;*/
 }
 
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: #C1C1C1;
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #A8A8A8;
+}
